--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Dr Anjali K Mohan</h3>
-              <p>She has over three decades of experience in development, institutional and policy frameworks, urban planning and management with work in Bhopal, Ranchi, Dharwad, Delhi and Bangalore.</p>
+              <p>She has over three decades of experience in development, institutional and policy frameworks, urban planning and management with work in many cities across India.</p>
             </div>
           </div>
 
@@ -145,7 +145,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Shreya Gadepalli</h3>
-              <p>Founder of Urbanworks Institute and ITDP India practice she guided dozens of cities to design and implement public transport systems and inclusive streets, as well as regulate motor vehicle use.</p>
+              <p>Founder of Urbanworks Institute and ITDP India practice she guided dozens of cities to design and implement public transport systems and inclusive streets.</p>
             </div>
           </div>
 
@@ -155,7 +155,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Alok Prasanna Kumar</h3>
-              <p>Alok Prasanna Kumar is Co-Founder and Lead, Vidhi Karnataka. His areas of research include judicial reforms, Constitutional law, urban development, and law and technology.</p>
+              <p>He is Co-Founder and Lead, Vidhi Karnataka. His areas of research include judicial reforms, Constitutional law, urban development, and law and technology.</p>
             </div>
           </div>
 
@@ -165,7 +165,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Satya Arikutharam</h3>
-              <p>He recently advised a state government in India and provided key inputs to the Unified Metropolitan Transport Authority in Bengaluru and to promote active mobility in the state of Karnataka, India</p>
+              <p>He recently advised a state government in India and provided key inputs to the Unified Metropolitan Transport Authority in Bengaluru and to promote active mobility in Karnataka.</p>
             </div>
           </div>
 
@@ -185,7 +185,7 @@
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Srinivas Alavilli</h3>
-              <p>Srinivas is a strong believer in systems like ward committees that enable citizen participation and bridge the gap between politicians and citizens in local governance.</p>
+              <p>He is a strong believer in systems like ward committees that enable citizen participation and bridge the gap between politicians and citizens in local governance.</p>
             </div>
           </div>
 
