--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 15: Will shared micromobility survive</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India and the outlook for shared micromobility.</p>
+            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India, Yulu's journey and the outlook for shared micromobility.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
