--- a/about.html
+++ b/about.html
@@ -88,9 +88,9 @@
             <h2 class="text-black font-weight-light mb-4">Sathya Sankaran</h2>
             <p style="text-align: justify;">Sathya is a Computer Science graduate with a Post graduation in Public Policy. He brings more than 25 years of experience in using technology and data to solve transportation problems. Over the last 13 years, as an advocate for sustainable transportation he has been a part of bringing in Rs. 34,000 crore Suburban Rail services to Bengaluru. He is the architect of <a href="https://altmo.app" class="text-decoration-none" target="_blank">AltMo</a>, a gamified mobility intelligence platform for the future of climate friendly cities. The data from this platform enabled a 342% increased allocation in the Comprehensive Master Plan for cycling and walking, helped put up more than 20 kms of cycle tracks in Bengaluru and won Silvassa Smart City an award for Excellence in Innovation. He founded <a href="https://www.cfam.in" class="text-decoration-none" target="_blank">Council for Active mobility</a>, a collective of 13 organisations working towards accelerating UN SDG's. His <a href="https://reliefriders.urbanmorph.com" class="text-decoration-none" target="_blank">Relief Riders</a> initiative during the COVID pandemic won the <a href="https://bangaloremirror.indiatimes.com/bangalore/others/bengalurus-good-riders-bag-honour-for-corona-relief/articleshow/86025441.cms" class="text-decoration-none" target="_blank">2021 UN World Bicycle Day Special Award</a> and nominated for the 2022 Nobel Peace Prize. He is also an adjunct faculty teaching Urban Governance for masters students, a director at the waste management startup, Bioman and the Bicycle Mayor of Bengaluru.</p>
             <p>
-              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+              <a href="https://twitter.com/tweetenator" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
+              <a href="https://www.instagram.com/picanator/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/sathyasankaran/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
             </p>
           </div>
           <div class="col-md-6 col-lg-6 text-center mb-5" data-aos="fade-up">
@@ -98,9 +98,9 @@
             <h2 class="text-black font-weight-light mb-4">Knerav Kodolikar</h2>
             <p style="text-align: justify;">Knerav has a Bachelors in Economics from Christ University, Bengaluru. He conceptualises and builds economic incentives for sustainablity projects at Urban Morph. He is also technology developer building the <a href="https://altmo.app" class="text-decoration-none" target="_blank">AltMo</a> platform. AltMo is the official platform for the Ministry of Housing and Urban Affairs, Smart City Mission's, Cycle2Work and Freedom2WalkCycleRun challenge. He rides for Equipe Goa amatuer racing team and at the National Championships.</p>
             <p>
-              <a href="#" class="pl-0 pr-3"><span class="icon-twitter"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
-              <a href="#" class="pl-3 pr-3"><span class="icon-facebook"></span></a>
+              <a href="https://www.facebook.com/knerav.kodolikar.1" class="pl-0 pr-3"><span class="icon-facebook"></span></a>
+              <a href="https://www.instagram.com/kneravk/" class="pl-3 pr-3"><span class="icon-instagram"></span></a>
+              <a href="https://www.linkedin.com/in/knerav-kodolikar-2a620517a/" class="pl-3 pr-3"><span class="icon-linkedin"></span></a>
             </p>
           </div>
         </div>
