--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP15-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 15: Will shared micromobility survive</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
             <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India, Yulu's journey and the outlook for shared micromobility.</p>
@@ -303,17 +303,17 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP14-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 14: Are we measuring mobility right?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 6 May 2023 <span class="sep">/</span> 54:05</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Roshan Toshniwal</strong> of Ola Mobility Institute talks about how metrics used to measure mobility are yet to be standardised. The challenges in data collection measurement and reporting of qualitative metrics are next to non existent. In the first week of May he released the Ease of Moving index he worked on at OMI.</p>
+            <p class="mb-4">In this episode <strong class="text-primary">Roshan Toshniwal</strong> of Ola Mobility Institute talks about how metrics used to measure mobility are yet to be standardised. The challenges in data collection measurement and reporting of qualitative metrics are next to non existent. In the last week of April he released the Ease of Moving index he worked on at OMI.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Are-we-measuring-Mobility-right---OoruLabs-Talking-Heads-podcast-Episode-14-e23j3nn" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/kk4EUeyxtHw" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/3BpCHFxa1Q0AEyUZl9ANJ6?si=0af90222c3de459a" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000611955733" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
             </div>
           </div>
