--- a/index.html
+++ b/index.html
@@ -248,8 +248,8 @@
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 17: Does size matter for cities?</a></h3>
-            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Is there a legal framework that can enable better governance of the cities? </p>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 54:43</small></span></div>
+            <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Why the 74th amendment is too weak to get us better cities? and how peoples participation at ward level can strengthen governance. </p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
