--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 18: Should cities abandon Masterplans?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 01:05:17</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Dr Anjali Karol Mohan</strong>, with 3 decades of experience in master planning for cities across India, talks about city master plans and how their implementation is faring. She also throws light on what is mixed use and how it can be leveraged to make cities more livable.</p>
+            <p class="mb-4">In this episode <strong class="text-primary">Dr Anjali Karol Mohan</strong>, with 3 decades of experience in master planning for cities across India, talks about city master plans and why their implementation is abysmal. We dig deep into the organisation complexities and structural deficiencies of the Bengaluru Masterplan as an example with exploaisve reveals from an insider.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -249,7 +249,7 @@
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 17: Does size matter for cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 54:43</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Why the 74th amendment is too weak to get us better cities? and how peoples participation at ward level can strengthen governance. </p>
+            <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Why the 74th amendment is too weak to get us better cities? He reveals how an alternate constitution considered a better devolution but was abandoned for unknown reasons. </p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -268,7 +268,7 @@
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 16: The problem with parking</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Dr Paul Barter</strong> who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He has worked for more than two decades on parking reforms and is the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast.</p>
+            <p class="mb-4">This episode is with <strong class="text-primary">Dr Paul Barter</strong> who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He lays out the steps for reforming parking in India. He has worked for more than two decades on parking reforms and is the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -287,7 +287,7 @@
             <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 15: Will shared micromobility survive</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India, Yulu's journey and the outlook for shared micromobility.</p>
+            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India. How the public transport organisations are not doing enough. Yulu's journey and philisophy. He reveals why bicycle sharing failed for Yulu.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
