--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP16-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 16: The problem with parking</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
             <p class="mb-4">This episode is with <strong class="text-primary">Dr Paul Barter</strong> who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He lays out the steps for reforming parking in India. He has worked for more than two decades on parking reforms and is the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast.</p>
@@ -284,15 +284,15 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP15-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 15: Will shared micromobility survive</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of Indias leading shared micromobility fleet operator. He talks about the current state of micromobility in India. How the public transport organisations are not doing enough. Yulu's journey and philisophy. He reveals why bicycle sharing failed for Yulu.</p>
+            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of India’s leading shared micro-mobility fleet operator . He talks about the current state of micro-mobility in India. How the public transport organisations are not doing enough. Yulu's journey and philosophy. He reveals why bicycle sharing failed for Yulu.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-shared-micro-mobility-survive---OoruLabs-Talking-Heads-podcast-Episode-15-e2404r3" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/JPsP_vytmgs" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/06xcdrJcYqWGMfTi9foivk?si=686d9da2defe411e" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
