--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP15-1.png');"></div>
           <div class="text">
-            <h3 class="font-weight-light"><a href="#">Episode 15: Will shared micro-mobility survive</a></h3>
+            <h3 class="font-weight-light"><a href="EP15-single-post.html">Episode 15: Will shared micro-mobility survive</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
             <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of India’s leading shared micro-mobility fleet operator . He talks about the current state of micro-mobility in India. How the public transport organisations are not doing enough. Yulu's journey and philosophy. He reveals why bicycle sharing failed for Yulu.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-shared-micro-mobility-survive---OoruLabs-Talking-Heads-podcast-Episode-15-e2404r3" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
