--- a/index.html
+++ b/index.html
@@ -291,11 +291,13 @@
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/JPsP_vytmgs" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-youtube"></span></a>
+                <span class="icon-youtube"  title="Watch on YouTube"></span></a>
               <a href="https://open.spotify.com/episode/06xcdrJcYqWGMfTi9foivk?si=686d9da2defe411e" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-spotify"></span></a>
+                <span class="icon-spotify" title="Listen on Spotify"></span></a>
               <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000612873445" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-podcast"></span></a>
+                <span class="icon-podcast" data-toggle="tooltip" title="Listen on Apple podcast"></span></a>
+              <a href="EP15-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
           </div>
         </div>
