--- a/index.html
+++ b/index.html
@@ -228,9 +228,28 @@
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP18-1.png');"></div>
           <div class="text">
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
-            <h3 class="font-weight-light"><a href="#">Episode 18: Should cities abandon Masterplans?</a></h3>
+            <h3 class="font-weight-light"><a href="#">Episode 19: Should cities abandon Masterplans?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 10 June 2023 <span class="sep">/</span> 01:05:17</small></span></div>
             <p class="mb-4">In this episode <strong class="text-primary">Dr Anjali Karol Mohan</strong>, with 3 decades of experience in master planning for cities across India, talks about city master plans and why their implementation is abysmal. We dig deep into the organisation complexities and structural deficiencies of the Bengaluru Masterplan as an example with explosive reveals from an insider.</p>
+            <h5 class="mb-1">Also on</h5>
+            <div>
+              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify"></span></a>
+              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast"></span></a>
+            </div>
+          </div>
+        </div>
+
+         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
+          <div class="image" style="background-image: url('images/WBD.jpeg');"></div>
+          <div class="text">
+            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h3 class="font-weight-light"><a href="#">Episode 18: World Bicycle Day special</a></h3>
+            <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 00:00</small></span></div>
+            <p class="mb-4">Coming soon</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
