--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
             <h5><span class="badge bg-success text-white">Coming soon</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 18: World Bicycle Day special</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 00:00</small></span></div>
-            <p class="mb-4">Coming soon</p>
+            <p class="mb-4">Special podcast on the occassion of world bicycle day. Watch this space.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
