--- a/EP15-single-post copy.html
+++ b/EP15-single-post copy.html
@@ -78,6 +78,19 @@
     
     <div class="container site-section">
       <div class="row justify-content-center">
+      <h1>Summary</h1>
+        <div class="col-md-12">
+          <p class="lead">In this podcast episode of OoruLabs, Sathya Sankaran and Knerav Kodolikar discussed micromobility with Amit Gupta, the co-founder and CEO of Yulu. Gupta explained that micromobility is a concept of efficient movement of people, especially in urban contexts, through short distance, small form factors, and sustainable vehicles. Gupta also pointed out that micromobility is not just limited to the first and last mile, but it can also be used for other distances that can efficiently connect people to public transportation.</p>
+
+          <p class="lead">Gupta shared that micromobility is a necessity for India, a country with limited road infrastructure and space, and it cannot rely solely on cars. He suggested that micromobility can make public transportation more frictionless and efficient by removing infrastructural and technological friction. Gupta also emphasized the importance of economies of scale, where users have access to everything they need for a single pricing bundle, making micromobility a winning formula for all countries.</p>
+
+          <p class="lead">The conversation centered on the challenges of deploying micromobility in India. Gupta noted that the adoption of micromobility by passengers might be hesitant due to the lack of a culture of public transport in some cities. However, he believes that economic incentives or disincentives, saving time, and efficient movement of people through public transportation can encourage the adoption of micromobility.</p>
+
+          <p class="lead"> Gupta emphasized that micromobility should not be limited to specific types of vehicles, such as kick scooters, but should be open to all form factors that can make the movement of people more efficient. He further explained that the size of the vehicle is a major constraint in micromobility, as it needs to be optimized for distance and viability. For example, long-distance travel should be done through public transportation, while short distances can be covered through micromobility.</p>
+
+          <p class="lead">In conclusion, Gupta believes that micromobility is the future of mobility as a service and that it can be a game-changer in solving India's traffic and pollution problems. By making public transportation more frictionless and efficient, micromobility can encourage more people to adopt it, leading to a more sustainable and equitable future.</p>
+          
+          </div>        
       <h1>Transcript</h1>
         <div class="col-md-12">
          <embed src="transcripts/EP15Transcript.txt" width="100%" height="800">
