--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
           
           <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
-              <img src="images/Guests/ashwinmahesh.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+              <img src="images/Guests/leszeksibilski.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
-              <h3 class="font-weight-light h5">Dr Ashwin Mahesh</h3>
-              <p>He is a scientist, an urbanist, journalist, politician and social technologist. He is working to increase the number of problem solving people.</p>
+              <h3 class="font-weight-light h5">Dr Leszek Jan Sibilski</h3>
+              <p>Sociologist, Teacher and Polish National track cyclist. He made the United Nations recognise June 3rd every year as World Bicycle Day. He has won several awards from Mayors of New York City, Boston & Bill Clinton</p>
             </div>
           </div>
 
@@ -126,6 +126,16 @@
             <div class="">
               <h3 class="font-weight-light h5">Dr Paul Barter</h3>
               <p>He is a transport-policy researcher, adviser, writer and trainer with a background in academia and in non-profits. He focuses on urban transport policy and parking</p>
+            </div>
+          </div>
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
+              <img src="images/Guests/ashwinmahesh.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Dr Ashwin Mahesh</h3>
+              <p>He is a scientist, an urbanist, journalist, politician and social technologist. He is working to increase the number of problem solving people.</p>
             </div>
           </div>
 
@@ -265,7 +275,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP17-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 17: Does size matter for cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 54:43</small></span></div>
             <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Why the 74th amendment is too weak to get us better cities? He reveals how an alternate constitution considered a better devolution but was abandoned for unknown reasons. </p>
@@ -284,10 +294,9 @@
         <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP16-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 16: The problem with parking</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Dr Paul Barter</strong> who talks about parking issues world wide. How sustainability in transport cannot ignore parking and its reform. He lays out the steps for reforming parking in India. He has worked for more than two decades on parking reforms and is the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast.</p>
+            <p class="mb-4">Discover the root causes of parking problems in cities and how to solve them in this episode of the OoruLabs podcast. Hear from <strong class="text-primary">Dr. Paul Barter</strong>, an adjunct professor at the Lee Kuan Yew School of Public Policy and is the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast, as he discusses how the mindset towards parking has led to inefficiencies and explains the importance of managing on-street parking. Listen to learn how incentivizing motorists to look for off-street parking can help solve the issue.</p>
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -296,6 +305,8 @@
                 <span class="icon-spotify"></span></a>
               <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
+              <a href="EP16-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
           </div>
         </div>
@@ -305,7 +316,7 @@
           <div class="text">
             <h3 class="font-weight-light"><a href="EP15-single-post.html">Episode 15: Will shared micro-mobility survive</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 13 May 2023 <span class="sep">/</span> 54:21</small></span></div>
-            <p class="mb-4">This episode is with <strong class="text-primary">Amit Gupta</strong> the CEO of one of India’s leading shared micro-mobility fleet operator . He talks about the current state of micro-mobility in India. How the public transport organisations are not doing enough. Yulu's journey and philosophy. He reveals why bicycle sharing failed for Yulu.</p>
+            <p class="mb-4">In this episode of the OoruLabs podcast, CEO of Yulu, <strong class="text-primary">Amit Gupta</strong>, talks about micromobility and its potential in India. He explains how it's not just about the first and last mile, but also about short distance travel in an efficient and sustainable manner. Join us as we dive deeper into the future of mobility and how micromobility can play a crucial role in it.</p>
               <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Will-shared-micro-mobility-survive---OoruLabs-Talking-Heads-podcast-Episode-15-e2404r3" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
