--- a/index.html
+++ b/index.html
@@ -99,13 +99,23 @@
         </div>
         <div class="nonloop-block-13 owl-carousel">
           
-          <div class="text-center p-3 p-md-5 bg-white">
+          <!-- <div class="text-center p-3 p-md-5 bg-white">
             <div class="mb-4">            
               <img src="images/Guests/leszeksibilski.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
             </div>
             <div class="">
               <h3 class="font-weight-light h5">Dr Leszek Jan Sibilski</h3>
               <p>Sociologist, Teacher and Polish National track cyclist. He made the United Nations recognise June 3rd every year as World Bicycle Day. He has won several awards from Mayors of New York City, Boston & Bill Clinton</p>
+            </div>
+          </div> -->
+
+          <div class="text-center p-3 p-md-5 bg-white">
+            <div class="mb-4">            
+              <img src="images/Guests/paulbarter.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
+            </div>
+            <div class="">
+              <h3 class="font-weight-light h5">Dr Paul Barter</h3>
+              <p>He is a transport-policy researcher, adviser, writer and trainer with a background in academia and in non-profits. He focuses on urban transport policy and parking</p>
             </div>
           </div>
 
@@ -116,16 +126,6 @@
             <div class="">
               <h3 class="font-weight-light h5">Dirk de Jager</h3>
               <p>He has experience as a city councilor in various city districts in Amsterdam. He has experience with vision development, strategy and design of bicycle infrastructure.</p>
-            </div>
-          </div>
-
-          <div class="text-center p-3 p-md-5 bg-white">
-            <div class="mb-4">            
-              <img src="images/Guests/paulbarter.jpeg" alt="Image" class="w-50 mx-auto img-fluid rounded-circle">
-            </div>
-            <div class="">
-              <h3 class="font-weight-light h5">Dr Paul Barter</h3>
-              <p>He is a transport-policy researcher, adviser, writer and trainer with a background in academia and in non-profits. He focuses on urban transport policy and parking</p>
             </div>
           </div>
 
@@ -278,7 +278,7 @@
             <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 17: Does size matter for cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 54:43</small></span></div>
-            <p class="mb-4">In this episode <strong class="text-primary">Alok Prasanna Kumar</strong> from Vidhi Legal Karnataka, talks to us about urban governance reforms. Are bigger cities better? Will governance be better if they were smaller? Why the 74th amendment is too weak to get us better cities? He reveals how an alternate constitution considered a better devolution but was abandoned for unknown reasons. </p>
+            <p class="mb-4">In this episode of the OoruLabs podcast, <strong class="text-primary">Alok Prasanna </strong>from the Vidhi Center for Legal Policy talks to Sathya Sankaran about the challenges of urban governance in India's megacities. They discuss the history of municipal governance, the need for effective ward committees, and the limitations of the current system. Prasanna highlights the importance of right-sizing governance and active intervention to keep pace with the scale of growth in India's cities, why the 74th amendment is too weak to get us better cities and reveals how an alternate constitution considered a better devolution but was abandoned for unknown reasons.
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
@@ -296,15 +296,17 @@
           <div class="text">
             <h3 class="font-weight-light"><a href="#">Episode 16: The problem with parking</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
-            <p class="mb-4">Discover the root causes of parking problems in cities and how to solve them in this episode of the OoruLabs podcast. Hear from <strong class="text-primary">Dr. Paul Barter</strong>, an adjunct professor at the Lee Kuan Yew School of Public Policy and is the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast, as he discusses how the mindset towards parking has led to inefficiencies and explains the importance of managing on-street parking. Listen to learn how incentivizing motorists to look for off-street parking can help solve the issue.</p>
+            <p class="mb-4">Discover the root causes of parking problems in cities and how to solve them in this episode of the OoruLabs podcast. Hear from <strong class="text-primary">Dr. Paul Barter</strong>, an adjunct professor at the Lee Kuan Yew School of Public Policy and the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast, as he discusses how the mindset towards parking has led to inefficiencies and explains the importance of managing on-street parking. Listen to learn how incentivizing motorists to look for off-street parking can help solve the issue.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/The-problem-with-parking---OoruLabs-Talking-Heads-podcast-Episode-16-e24c3og" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-podcast"></span></a>
+              <a href="https://youtu.be/NynCSp9r8Z0" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-youtube" data-toggle="tooltip" title="Watch on YouTube"></span></a>
+              <a href="https://open.spotify.com/episode/2GSKeWJEwyO9XZakL3vZKx?si=581f1df0ad744cf1" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-spotify" data-toggle="tooltip" title="Listen on Spotify"></span></a>
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000613739339" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-podcast" data-toggle="tooltip" title="Listen on Apple podcast"></span></a>
               <a href="EP16-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
@@ -321,9 +323,9 @@
             <h5 class="mb-1">Also on</h5>
             <div>
               <a href="https://youtu.be/JPsP_vytmgs" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-youtube"  title="Watch on YouTube"></span></a>
+                <span class="icon-youtube" data-toggle="tooltip" title="Watch on YouTube"></span></a>
               <a href="https://open.spotify.com/episode/06xcdrJcYqWGMfTi9foivk?si=686d9da2defe411e" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
-                <span class="icon-spotify" title="Listen on Spotify"></span></a>
+                <span class="icon-spotify" data-toggle="tooltip" title="Listen on Spotify"></span></a>
               <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000612873445" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast" data-toggle="tooltip" title="Listen on Apple podcast"></span></a>
               <a href="EP15-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
