--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <h3 class="font-weight-light"><a href="#">Episode 16: The problem with parking</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 20 May 2023 <span class="sep">/</span> 01:01:51</small></span></div>
             <p class="mb-4">Discover the root causes of parking problems in cities and how to solve them in this episode of the OoruLabs podcast. Hear from <strong class="text-primary">Dr. Paul Barter</strong>, an adjunct professor at the Lee Kuan Yew School of Public Policy and the host of the <a href="https://www.reinventingparking.org">Reinventing parking</a> podcast, as he discusses how the mindset towards parking has led to inefficiencies and explains the importance of managing on-street parking. Listen to learn how incentivizing motorists to look for off-street parking can help solve the issue.</p>
-              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/The-problem-with-parking---OoruLabs-Talking-Heads-podcast-Episode-16-e24c3og" height="102px" width="400px" frameborder="0" scrolling="no"></iframe>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/The-problem-with-parking---OoruLabs-Talking-Heads-podcast-Episode-16-e24c3og" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
 
             <h5 class="mb-1">Also on</h5>
             <div>
