--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP18-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Coming soon</span></h5>
+            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 18: World Bicycle Day special</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 3 June 2023 <span class="sep">/</span> 00:00</small></span></div>
             <p class="mb-4">Special podcast on the occassion of world bicycle day. Watch this space.</p>
@@ -275,18 +275,20 @@
          <div class="d-block d-md-flex podcast-entry bg-white mb-5" data-aos="fade-up">
           <div class="image" style="background-image: url('images/pod-images/OoruLabs EP17-1.png');"></div>
           <div class="text">
-            <h5><span class="badge bg-success text-white">Up next</span></h5>
             <h3 class="font-weight-light"><a href="#">Episode 17: Does size matter for cities?</a></h3>
             <div class="text-white mb-3"><span class="text-black-opacity-05"><small>Talking Heads <span class="sep">/</span> 27 May 2023 <span class="sep">/</span> 54:43</small></span></div>
-            <p class="mb-4">In this episode of the OoruLabs podcast, <strong class="text-primary">Alok Prasanna </strong>from the Vidhi Center for Legal Policy talks to Sathya Sankaran about the challenges of urban governance in India's megacities. They discuss the history of municipal governance, the need for effective ward committees, and the limitations of the current system. Prasanna highlights the importance of right-sizing governance and active intervention to keep pace with the scale of growth in India's cities, why the 74th amendment is too weak to get us better cities and reveals how an alternate constitution considered a better devolution but was abandoned for unknown reasons.
+            <p class="mb-4">In this episode of the OoruLabs podcast, <strong class="text-primary">Alok Prasanna </strong>from the Vidhi Center for Legal Policy talks to Sathya Sankaran about the challenges of urban governance in India's megacities. They discuss the history of municipal governance, the need for effective ward committees, and the limitations of the current system. Prasanna highlights the importance of right-sizing governance and active intervention to keep pace with the scale of growth in India's cities, why the 74th amendment is too weak to get us better cities and reveals how an alternate constitution considered a better devolution but was abandoned for unknown reasons.</p>
+              <iframe src="https://podcasters.spotify.com/pod/show/oorulabs/embed/episodes/Does-size-matter-for-cities---OoruLabs-Talking-Heads-podcast-Episode-17-e24oqo9" height="102px" width="100%" frameborder="0" scrolling="no"></iframe>
             <h5 class="mb-1">Also on</h5>
             <div>
-              <a href="#" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://youtu.be/helgTk7_0TE" class="pl-0 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-youtube"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://open.spotify.com/episode/6j0InEaeBYlpWSTyFwM1N8?si=65d743a9ba814628" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-spotify"></span></a>
-              <a href="#" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+              <a href="https://podcasts.apple.com/in/podcast/the-oorulabs-podcast/id1682407685?i=1000614672752" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
                 <span class="icon-podcast"></span></a>
+              <a href="EP17-single-post.html" class="pl-3 pr-3" style="font-size: 30px;" target="_blank">
+                <span class="icon-subtitles" data-toggle="tooltip" title="Click for transcript"></span></a>
             </div>
           </div>
         </div>
